Eclipse_workplace_J2ee/Complier_Practise/src/Complier/whileParse.java
/* Generated By:JavaCC: Do not edit this line. whileParse.java */
package Complier;

import java.io.BufferedWriter;
import java.io.File;
import java.io.FileInputStream;
import java.io.FileWriter;
import java.io.IOException;
import java.util.ArrayList;
import java.util.List;

@SuppressWarnings("all")
public class whileParse implements whileParseConstants {
	public static int count = 0; /*��Ԫʽ���*/

	public static int ncount = 0; /*��ʱ�����±�*/

	public static List<struct> aList = new ArrayList<struct>();// ----------�����Ԫʽ

	// ---------------��Ԫʽ����------------------
	public static class struct {
		int num;
		String operate;
		String obj1;
		String obj2;
		String situ;

		public struct(int _num, String _operate, String _obj1, String _obj2, String _situ) {
			this.num = _num;
			this.operate = _operate;
			this.obj1 = _obj1;
			this.obj2 = _obj2;
			this.situ = _situ;

		}

		@Override
		public String toString() {
			return "(" + this.num + ")" + " " + "(" + this.operate + "," + " " + this.obj1 + ", " + this.obj2 + ", " + this.situ + ")";
		}
	}

	public static void main(String args[]) throws ParseException, IOException {

		FileInputStream fileStream = null;
		BufferedWriter bw = null;
		String str;

		// ----------��test.txt�ļ���ȡ��������-------------------
		fileStream = new FileInputStream("if.txt");
		whileParse parser = new whileParse(fileStream);

		try {
			switch (parser.start()) {
			case 0:
				System.out.println("OK.");
				break;
			case 1:
				System.out.println("Goodbye.");
				break;
			default:
				break;
			}

		} catch (Exception e) {
			System.out.println("NOK.");
			System.out.println(e.getMessage());
			parser.ReInit(System.in);
		} catch (Error e) {
			System.out.println("Oops.");
			System.out.println(e.getMessage());

		}

		// ----------------------������ļ�output.txtд������������н��--------------
		bw = new BufferedWriter(new FileWriter(new File("output.txt")));

		// -------------����aList�����ж���������Ԫʽ���󣬲�����������output.txt
		for (int i = 0; i < aList.size(); i++) {

			str = ((struct) aList.get(i)).toString();

			bw.write(str, 0, str.length());
			bw.newLine();

		}
		// -------------�ر����������--------------------------------------------------
		bw.close();
		fileStream.close();
	}

	// ---------------------------��ʼ����-------------------------------------------
	static final public int start() throws ParseException {
		trace_call("start");
		try {
			if (jj_2_1(2)) {
				jj_consume_token(VOID);
				jj_consume_token(MAIN);
				jj_consume_token(LC);
				jj_consume_token(RC);
				jj_consume_token(LB);
				block();
				jj_consume_token(RB);
				jj_consume_token(0);
				{
					if (true) {
						return 0;
					}
				}
			} else if (jj_2_2(2)) {
				jj_consume_token(0);
				{
					if (true) {
						return 1;
					}
				}
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("start");
		}
	}

	// --------------main()�е�����------------------
	static final public int block() throws ParseException {
		trace_call("block");
		try {
			if (jj_2_3(2)) {
				statementstring();
				{
					if (true) {
						return 0;
					}
				}
			} else if (jj_2_4(2)) {
				jj_consume_token(0);
				{
					if (true) {
						return 1;
					}
				}
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("block");
		}
	}

	// ---------��䴮----------
	static final public void statementstring() throws ParseException {
		trace_call("statementstring");
		try {
			statement();
			isstatement();
		} finally {
			trace_return("statementstring");
		}
	}

	static final public void isstatement() throws ParseException {
		trace_call("isstatement");
		try {
			if (jj_2_5(2)) {
				statementstring();
			} else {
				;
			}
		} finally {
			trace_return("isstatement");
		}
	}

	// -------------���ֿ������---------------
	static final public void statement() throws ParseException {
		trace_call("statement");
		try {
			if (jj_2_6(2)) {
				IfStatement();
			} else if (jj_2_7(2)) {
				DeclareStatement();
			} else if (jj_2_8(2)) {
				ForStatement();
			} else if (jj_2_9(2)) {
				WhileStatement();
			} else if (jj_2_10(2)) {
				Switch_statement();
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
		} finally {
			trace_return("statement");
		}
	}

	// -----------------�����͸�ֵ���--------------------------
	static final public void DeclareStatement() throws ParseException {
		trace_call("DeclareStatement");
		try {
			label_1: while (true) {
				if (jj_2_11(2)) {
					;
				} else {
					break label_1;
				}
				if (jj_2_12(2)) {
					jj_consume_token(INT);
				} else if (jj_2_13(2)) {
					jj_consume_token(CHAR);
				} else if (jj_2_14(2)) {
					jj_consume_token(FLOAT);
				} else if (jj_2_15(2)) {
					jj_consume_token(DOUBLE);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
				label_2: while (true) {
					if (jj_2_16(2)) {
						;
					} else {
						break label_2;
					}
					jj_consume_token(ID);
					jj_consume_token(DOU);
				}
				jj_consume_token(ID);
				jj_consume_token(FEN);
			}
			state();
			label_3: while (true) {
				if (jj_2_17(2)) {
					;
				} else {
					break label_3;
				}
				state();
			}
		} finally {
			trace_return("DeclareStatement");
		}
	}

	static final public void state() throws ParseException {
		trace_call("state");
		try {
			idstate();
		} finally {
			trace_return("state");
		}
	}

	static final public void idstate() throws ParseException {
		trace_call("idstate");
		try {
			String temp;
			String id;
			String temp1;
			id = jj_consume_token(ID).image;
			if (jj_2_18(2)) {
				jj_consume_token(ADD);
				count++;
				aList.add(new struct(count, "+", id, "1", id));
			} else if (jj_2_19(2)) {
				jj_consume_token(MINUSD);
				count++;
				aList.add(new struct(count, "-", id, "1", id));
			} else if (jj_2_20(2)) {
				jj_consume_token(EQUAL);
				temp = Expression();
				count++;

				aList.add(new struct(count, "=", temp, "_", id));
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
			jj_consume_token(FEN);
		} finally {
			trace_return("idstate");
		}
	}

	// ---------------------------------if���-------------------------------
	static final public void IfStatement() throws ParseException {
		trace_call("IfStatement");
		try {
			int j, j1;
			jj_consume_token(IF);
			jj_consume_token(LC);
			Condition();
			jj_consume_token(RC);
			count++;
			j = count;
			aList.add(new struct(count, "J", "_", "_", "#"));
			jj_consume_token(LB);
			isstatement();
			jj_consume_token(RB);
			count++;
			j1 = count;
			aList.add(new struct(count, "J", "_", "_", "#"));
			if (jj_2_23(2)) {
				jj_consume_token(ELSE);
				if (jj_2_21(2)) {
					statement();
				} else if (jj_2_22(2)) {
					jj_consume_token(LB);
					isstatement();
					jj_consume_token(RB);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
				aList.set(j1 - 1, new struct(j1, "J", "_", "_", "" + (count + 1)));
				aList.set(j - 1, new struct(j, "J", "_", "_", "" + (j1 + 1)));
			} else {
				;
			}
		} finally {
			trace_return("IfStatement");
		}
	}

	// ----------------while���--------------------
	static final public void WhileStatement() throws ParseException {
		trace_call("WhileStatement");
		try {
			Token node;
			int j1;
			int j2;
			int next;
			int next1;
			jj_consume_token(WHILE);
			jj_consume_token(LC);
			next1 = count + 1;
			Condition();
			jj_consume_token(RC);
			count++;
			j1 = count;
			aList.add(new struct(count, "J", "_", "_", "#"));
			if (jj_2_24(2)) {
				statement();
			} else if (jj_2_25(2)) {
				jj_consume_token(LB);
				isstatement();
				jj_consume_token(RB);
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
			count++;
			aList.add(new struct(count, "J", "_", "_", "" + next1));

			aList.set(j1 - 1, new struct(j1, "J", "_", "_", "" + (count + 1)));
		} finally {
			trace_return("WhileStatement");
		}
	}

	// ------------����--------------------
	static final public int Condition() throws ParseException {
		trace_call("Condition");
		try {
			Token node;
			int next;
			String result;
			String middle;
			result = Expression();
			if (jj_2_26(2)) {
				node = jj_consume_token(LT);
				middle = Expression();
				count++;
				next = count + 1;
				aList.add(new struct(count, "J<", result, middle, "" + (next + 1)));
			} else if (jj_2_27(2)) {
				node = jj_consume_token(GT);
				middle = Expression();
				count++;
				next = count + 1;
				aList.add(new struct(count, "J>", result, middle, "" + (next + 1)));
			} else if (jj_2_28(2)) {
				node = jj_consume_token(GE);
				middle = Expression();
				count++;
				next = count + 1;
				aList.add(new struct(count, "J>=", result, middle, "" + (next + 1)));
			} else if (jj_2_29(2)) {
				node = jj_consume_token(LE);
				middle = Expression();
				count++;
				next = count + 1;
				aList.add(new struct(count, "J<=", result, middle, "" + (next + 1)));
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
			{
				if (true) {
					return next;
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("Condition");
		}
	}

	// --------------------------�����ⲿ��Ϊ��Ա��ؼ��ĳɹ�for)----------------------
	// ----for���-------
	static final public void ForStatement() throws ParseException {
		trace_call("ForStatement");
		try {
			Token node;
			int j1;
			int j2;
			int next;
			int next1;
			jj_consume_token(FOR);
			jj_consume_token(LC);
			next1 = count + 2;
			if (jj_2_30(2)) {
				ForFirst();
			} else {
				;
			}
			jj_consume_token(FEN);
			if (jj_2_31(2)) {
				ForSecond();
			} else {
				;
			}
			jj_consume_token(FEN);
			count++;
			j1 = count;
			aList.add(new struct(count, "J", "_", "_", "#"));
			if (jj_2_32(2)) {
				ForThird();
			} else {
				;
			}
			jj_consume_token(RC);
			jj_consume_token(LB);
			isstatement();
			jj_consume_token(RB);
			count++;
			aList.add(new struct(count, "J", "_", "_", "" + next1));
			aList.set(j1 - 1, new struct(j1, "J", "_", "_", "" + (count + 1)));
		} finally {
			trace_return("ForStatement");
		}
	}

	static final public void ForFirst() throws ParseException {
		trace_call("ForFirst");
		try {
			Token node;
			String temp = "";
			String temp1 = "";
			if (jj_2_37(2)) {
				if (jj_2_33(2)) {
					jj_consume_token(INT);
				} else if (jj_2_34(2)) {
					jj_consume_token(CHAR);
				} else if (jj_2_35(2)) {
					jj_consume_token(FLOAT);
				} else if (jj_2_36(2)) {
					jj_consume_token(DOUBLE);
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
			} else {
				;
			}
			temp = jj_consume_token(ID).image;
			if (jj_2_38(2)) {
				jj_consume_token(EQUAL);
				temp1 = Expression();
			} else {
				;
			}
			count++;
			aList.add(new struct(count, "=", temp1, "_", temp));
		} finally {
			trace_return("ForFirst");
		}
	}

	static final public int ForSecond() throws ParseException {
		trace_call("ForSecond");
		try {
			Token node;
			int next;
			String result;
			String middle;
			result = Expression();
			if (jj_2_39(2)) {
				node = jj_consume_token(LT);
				middle = Expression();
				count++;
				next = count + 1;
				aList.add(new struct(count, "J<", result, middle, "" + (next + 1)));
			} else if (jj_2_40(2)) {
				node = jj_consume_token(GT);
				middle = Expression();
				count++;
				next = count + 1;
				aList.add(new struct(count, "J>", result, middle, "" + (next + 1)));
			} else if (jj_2_41(2)) {
				node = jj_consume_token(GE);
				middle = Expression();
				count++;
				next = count + 1;
				aList.add(new struct(count, "J>=", result, middle, "" + (next + 1)));
			} else if (jj_2_42(2)) {
				node = jj_consume_token(LE);
				middle = Expression();
				count++;
				next = count + 1;
				aList.add(new struct(count, "J<=", result, middle, "" + (next + 1)));
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
			{
				if (true) {
					return next;
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("ForSecond");
		}
	}

	static final public void ForThird() throws ParseException {
		trace_call("ForThird");
		try {
			Token node;
			String temp = "";
			String temp1 = "";
			temp = jj_consume_token(ID).image;
			if (jj_2_43(2)) {
				jj_consume_token(ADD);
				count++;
				aList.add(new struct(count, "+", temp, "1", temp));
			} else if (jj_2_44(2)) {
				jj_consume_token(MINUSD);
				count++;
				aList.add(new struct(count, "-", temp, "1", temp));
			} else if (jj_2_45(2)) {
				jj_consume_token(EQUAL);
				temp1 = Expression();
				count++;
				aList.add(new struct(count, "=", temp1, "_", temp));
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
		} finally {
			trace_return("ForThird");
		}
	}

	// -------------------------------��ؼ��ɹ�˽���--------------------------------

	// -------���ʽ�����мӼ���Ӧ�����ڳ˳���֮�ϣ����﷨���Ϸ������˳��θ���------------
	static final public String Expression() throws ParseException {
		trace_call("Expression");
		try {
			String result;
			String middle;
			String temp;
			result = Term();
			temp = result;
			label_4: while (true) {
				if (jj_2_46(2)) {
					;
				} else {
					break label_4;
				}
				if (jj_2_47(2)) {
					jj_consume_token(PLUS);
					middle = Term();
					count++;
					temp = "T" + ncount;
					ncount++;
					aList.add(new struct(count, "+", result, middle, temp));

					result = temp;
				} else if (jj_2_48(2)) {
					jj_consume_token(MINUS);
					middle = Term();
					count++;
					temp = "T" + ncount;
					ncount++;
					aList.add(new struct(count, "-", result, middle, temp));

					result = temp;
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
			{
				if (true) {
					return result;
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("Expression");
		}
	}

	// ----------�˷����ʽ��λ���﷨��������-----------
	static final public String Term() throws ParseException {
		trace_call("Term");
		try {
			Token node;
			String result;
			String middle;
			String temp = "";
			result = unary();
			temp = result;
			label_5: while (true) {
				if (jj_2_49(2)) {
					;
				} else {
					break label_5;
				}
				if (jj_2_50(2)) {
					jj_consume_token(MULTIPLY);
					middle = unary();
					count++;
					temp = "T" + ncount;
					ncount++;
					aList.add(new struct(count, "*", result, middle, temp));

					result = temp;
				} else if (jj_2_51(2)) {
					jj_consume_token(DIVIDE);
					middle = unary();
					count++;
					temp = "T" + ncount;
					ncount++;
					aList.add(new struct(count, "/", result, middle, temp));

					result = temp;
				} else {
					jj_consume_token(-1);
					throw new ParseException();
				}
			}
			{
				if (true) {
					return temp;
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("Term");
		}
	}

	static final public String unary() throws ParseException {
		trace_call("unary");
		try {
			String str;
			str = element();
			{
				if (true) {
					return str;
				}
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("unary");
		}
	}

	// --------����Ļ�������󡣿����ǳ����������Ǳ��ʽ��Ҳ�����Ǳ�ʾ��---------
	static final public String element() throws ParseException {
		trace_call("element");
		try {
			String str;
			Token node;
			String L_place;
			String L_offset;
			String variable;
			String temp;
			if (jj_2_52(2)) {
				node = jj_consume_token(CONSTANT);
				{
					if (true) {
						return node.image;
					}
				}
			} else if (jj_2_53(2)) {
				jj_consume_token(LC);
				str = Expression();
				jj_consume_token(RC);
				{
					if (true) {
						return str;
					}
				}
			} else if (jj_2_54(2)) {
				variable = jj_consume_token(ID).image;
				{
					if (true) {
						return variable;
					}
				}
			} else {
				jj_consume_token(-1);
				throw new ParseException();
			}
			throw new Error("Missing return statement in function");
		} finally {
			trace_return("element");
		}
	}

	// --------------------------------����Ϊ��Ա����ĳɹ�-----------------------------------------------------------------------------
	// -----switch���--------
	static final public void Switch_statement() throws ParseException {
		trace_call("Switch_statement");
		try {
			struct b = new struct(0, "", "", "", "");

			int j1;
			int j2;
			int j3 = 0;
			int j4;
			jj_consume_token(SWITCH);
			j4 = count + 1;
			jj_consume_token(LC);
			Expression();
			jj_consume_token(RC);
			jj_consume_token(LB);
			label_6: while (true) {
				jj_consume_token(CASE);
				Expression();
				count++;
				aList.add(new struct(count, "JT", "_", "_", "" + (count + 2)));
				count++;
				j1 = count;
				aList.add(new struct(count, "J", "_", "_", "#"));
				jj_consume_token(MAO);
				statement();
				count++;
				j2 = count;
				aList.add(new struct(count, "J", "_", "_", "#"));
				jj_consume_token(BREAK);
				jj_consume_token(FEN);
				aList.set(j1 - 1, new struct(j1, "J", "_", "_", "" + (count + 1)));
				if (jj_2_55(2)) {
					;
				} else {
					break label_6;
				}
			}
			jj_consume_token(_DEFAULT);
			jj_consume_token(MAO);
			statement();
			jj_consume_token(BREAK);
			count++;
			j3 = count;
			aList.add(new struct(count, "J", "_", "_", "#"));
			aList.set(j3 - 1, new struct(j3, "J", "_", "_", "" + (count + 1)));

			for (int i = j4; i < aList.size(); i++) {
				b = aList.get(i);
				if (b.situ == "#") {
					aList.set(i, new struct(i, "J", "_", "_", "" + (count + 1)));
				}
			}
			jj_consume_token(FEN);
			jj_consume_token(RB);
		} finally {
			trace_return("Switch_statement");
		}
	}

	static private boolean jj_2_1(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_1();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(0, xla);
		}
	}

	static private boolean jj_2_2(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_2();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(1, xla);
		}
	}

	static private boolean jj_2_3(int xla) {
		jj_la = xla;
		jj_lastpos = jj_scanpos = token;
		try {
			return !jj_3_3();
		} catch (LookaheadSuccess ls) {
			return true;
		} finally {
			jj_save(2, xla);
		}
	}
